package com.tjudream.designpattern.composite.general;

/**
 * 描述:
 * <p>
 * Created by mengxiansen on 2018-11-29 11:17
 *
 * @author mengxs@lenovocloud.com
 */
public abstract class Component {
    //个体和整体都具有的共享
    public void operation() {

    }
}
