package com.tjudream.designpattern.composite.general;

/**
 * 描述:
 * <p>
 * Created by mengxiansen on 2018-11-29 11:20
 *
 * @author mengxs@lenovocloud.com
 */
public class Leaf extends Component {
    /**
      * 可以覆写父类方法
    @Override
    public void operation() {

    }*/
}
